--- a/css/styles.css
+++ b/css/styles.css
@@ -2,57 +2,126 @@
     --primary-text-color: #757575;
     --title-text-color: #212121;
     --link-text-color: #2196F3;
+    --second-text-color:#FFFFFF;
 }
 
-* {
-    
+html {
     color: var(--title-text-color);
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 
 a {
     text-decoration: none;
 }
 
+img{
+    display: block;
+}
+
 li {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+ul,
+p{
+    margin: 0;
+    padding: 0;
 }
 
 p{
     color: var(--primary-text-color);
 }
 
+
 /* Шапка*/
+
+.header:first-child{
+    display: flex;
+    height: 80px;
+    width: 1170px;
+    margin-left: 215px;
+    margin-right: 215px;
+    padding: 32px 15px;
+}
+
+.container{
+    display: flex;
+    width: 1600px;
+    justify-content: space-between;
+    align-items: baseline;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.navigation{
+    display: flex;
+    align-content: center;
+    align-items: baseline;
+}
+
+.navigation > .nav-logo{
+    margin-right: 68px;
+}
 
 .nav-logo{
     font-family: 'Raleway';
     font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
+    color: var(--title-text-color);
 }
 
-.header-logo {
+.header-logo{
     font-family: 'Raleway';
     color: var(--link-text-color);
 }
 
-.nav-item{
+.nav-list,
+.contact-list{
+    display: flex;
+    align-content: center;
+    align-items: baseline;
+}
+
+.nav-link,
+.contact-link{
     font-weight: 500;
     font-size: 14px;
-    line-height: 1.2;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
 
-.nav-list .nav-item{
-    color: var(--title-text-color);
-}
-
-.contact-list .nav-item {
+.contact-list .contact-link{
+    display: block;
+    margin-left: 50px;
     color: var(--primary-text-color);
 }
 
-.nav-item:hover,
-.nav-item:focus
-.nav-item:any-link {
+.nav-list .nav-link{
+    display: block;
+    padding: 0px;
+    margin-right: 25px;
+    margin-left: 25px;
+    color: var(--title-text-color);
+}
+
+.nav-link:hover,
+.nav-link:focus
+.nav-link:any-link {
+    color: var(--link-text-color);
+}
+
+.contact-link:hover,
+.contact-link:focus
+.contact-link:any-link {
     color: var(--link-text-color);
 }
 
@@ -60,24 +129,25 @@ p{
 color: var(--link-text-color);
 }
 
+
 /*Основной контент*/
+
 
 .main-header{
     background:  #2F303A;
-}
-
-.title-hero{
-    color: #FFFFFF;
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
     text-align: center;
 }
 
-/*.main-button{
-
+.title-hero{
+    font-family: Roboto;
+    color: var(--second-text-color);
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
 }
 
+/*
 .main-features{
 
 }
@@ -98,11 +168,12 @@ color: var(--link-text-color);
 /*.main-works {
 
 }
+*/
 
 .main-team{
-
+    background: #F5F4FA;
 }
-*/
+
 
 .team-name {
     font-weight: 500;
@@ -122,11 +193,16 @@ color: var(--link-text-color);
 /*Подвал*/
 footer{
     background:#2F303A;
-   /* color: #FFFFFF;*/
+    align-content: center;
+    align-items: center;
+    margin-left: 215px;
+    margin-right: 215px;
+    justify-content: space-between;
+    width: 1170px;
 }
 
 .footer-logo {
-    color: #FFFFFF;
+    color: var(--second-text-color);
     font-family: 'Raleway';
     font-weight: 700;
     font-size: 26px;
@@ -134,7 +210,7 @@ footer{
 }
 
 .footer-address{
-    color: #FFFFFF;
+    color: var(--second-text-color);
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -175,10 +251,26 @@ footer{
 }
 
 /*button*/
-    button:hover,
-    button:focus{
+
+button:hover,
+button:focus{
     background: var(--link-text-color);
-    color: #FFFFFF;
+    color: var(--second-text-color);
+}
+
+.main-button{
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+
+    background: var(--link-text-color);
+    color: var(--second-text-color); 
+    
+    border: 0;
+    padding: 10px 32px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;   
 }
 
 .button-slice{
