--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,7 @@ color: var(--link-text-color);
     background-color: #fff;
     border-radius: 4px;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    margin-bottom: 50px;
 }
 
 .team-name {
@@ -295,7 +296,14 @@ color: var(--link-text-color);
 footer{
     background:#2F303A;
     width: 1600px;
+    padding-top: 50px;
     padding-left: 230px;
+    height: 180px;
+}
+
+.footer{
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .footer-logo {
