--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ body{
     margin-left: 215px;
     margin-right: 215px;
     padding: 32px 15px;
-    border: 1px solid #ECECEC;
+    border-bottom: 1px solid #ECECEC;
 }
 
 .container{
@@ -301,11 +301,6 @@ footer{
     height: 180px;
 }
 
-.footer{
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
 .footer-logo {
     color: var(--second-text-color);
     font-family: 'Raleway';
@@ -343,6 +338,32 @@ footer{
 }
 */
 
+.porfolio-navigation{
+    display: flex;
+    width: 1170px;
+    height: 80px;
+    margin-left: 215px;
+    margin-right: 215px;
+    justify-content: center;
+    align-items: center;
+}
+
+.port-nav-item {
+    margin: 10px;    
+}
+
+.main-portfolio{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 215px;
+    margin-right: 215px;
+    margin-bottom: 50px;
+}
+
+.main-port-item{
+    flex-basis: calc(100% / 3 - 10px);
+}
+
 .porfolio-header{
     font-weight: 700;
     font-size: 18px;
@@ -353,6 +374,7 @@ footer{
     font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
+    margin-bottom: 10px;
 }
 
 /*button*/
