--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
     --second-text-color:#FFFFFF;
 }
 
-html {
+body {
     color: var(--title-text-color);
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
@@ -40,31 +40,25 @@ p{
     color: var(--primary-text-color);
 }
 
-body{
-    border: 1px grey;
-    width: 1600px;
-}
-
-
 /* Шапка*/
 
 .header:first-child{
-    display: flex;
-    height: 80px;
-    width: 1170px;
-    margin-left: 215px;
-    margin-right: 215px;
-    padding: 32px 15px;
+    padding: 32px 0px;
     border-bottom: 1px solid #ECECEC;
 }
 
 .container{
-    display: flex;
-    width: 1600px;
-    justify-content: space-between;
-    align-items: baseline;
+    width: 1200px;
     margin-right: auto;
     margin-left: auto;
+    padding-left: 15px;
+    padding-top: 15px;
+}
+
+.container-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .navigation{
@@ -138,129 +132,84 @@ color: var(--link-text-color);
 
 /*Основной контент*/
 
+.section{
+    padding: 94px 0;
+}
 
 .main-header{
     background-color:  #2F303A;
     text-align: center;
     height: 600px;
-    width: 1600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .title-hero{
-    font-family: Roboto;
     color: var(--second-text-color);
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     letter-spacing: 0.06em;
-    text-transform: uppercase;
-    padding-top: 200px;
+    text-transform: uppercase;;
     padding-bottom: 30px;
-   
 }
 
 
 /*Особенности*/
 
-/*
 .main-features{
-
-}
-*/
-.container-features{
-    width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: space-between;
-    align-items: center;
-    
+    padding-top: 94px;
 }
 
 .features-list{
     display: flex;
-    margin-left: -10px;
-    margin-top: -10px;
     flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-
-    width: 1170px;
-    margin-left: 215px;
-    margin-right: 215px;
-    padding-left: 25px;
-    padding-right: 25px;
+    margin-top: -30px;
+    margin-left: -30px;
 }
 
 .features-item{
-    padding: 10px;
-    margin-left: 10px;
-    margin-top: 10px;
-    margin-top: 94px;
-    flex-basis: calc(100% / 4 - 10px);
+    margin-left: 30px;
+    margin-top: 30px;
+    flex-basis: calc(100% / 4 - 30px);
 }   
 
 .features-header{
-    display: block;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     margin-bottom: 10px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 
 .features-text{
-    display: block;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
-    margin-bottom: 50px;
+    letter-spacing: 0.03em;
 }
 
 
 /*Чем мы занимаемся*/
 
-.main-works{
-    width: 1170px;
-    margin-left: 215px;
-    margin-right: 215px;
-    padding-left: 25px;
-    padding-right: 25px;
-    margin-bottom: 94px;
-}
-
-.container-works{
-    width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.works-header{
+.section-header{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.67;
+    letter-spacing: 0.03em;
     margin-bottom: 50px;
+    text-align: center;
 }
 
- .work-list{
+.work-list{
     display: flex;
+    justify-content: space-between;
 }
-.work-item{
-    margin: 5px
-    
-}
+
 
 /*Команда*/
-
-.main-team{
-    background: #F5F4FA;
-    width: 1170px;
-    margin-left: 215px;
-    margin-right: 215px;
-    padding: 30px 15px;
-}
-
-.team-header{
-    margin-top: 50px;
-    margin-bottom: 30px;
-}
 
 .team-list{
     display: flex;
@@ -270,35 +219,38 @@ color: var(--link-text-color);
 }
 
 .team-item{
-    flex-basis: calc(100% / 4 - 15px);
-    background-color: #fff;
+    flex-basis: calc(100% / 4 - 30px);
+    background-color: var(--second-text-color);
     border-radius: 4px;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-    margin-bottom: 50px;
+    
 }
 
 .team-name {
     font-weight: 500;
     font-size: 16px;
-    line-height: 1.2;
+    line-height: 1.19;
     text-align: center;
+    letter-spacing: 0.03em;
+    margin-top: 30px;
+    margin-bottom: 10px;
 }
 
 .name-direction {
     font-weight: 400;
     font-size: 16px;
-    line-height: 1.2;
+    line-height: 1.19;
     text-align: center;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 30px;
 }
 
 
 /*Подвал*/
 footer{
     background:#2F303A;
-    width: 1600px;
-    padding-top: 50px;
-    padding-left: 230px;
-    height: 180px;
+    padding: 60px 0;
 }
 
 .footer-logo {
@@ -306,15 +258,16 @@ footer{
     font-family: 'Raleway';
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.2;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
 }
 
 .footer-address{
     color: var(--second-text-color);
-    font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
+    letter-spacing: 0.03em;
 }
 
 .footer-contact {
@@ -322,6 +275,7 @@ footer{
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71px;
+    letter-spacing: 0.03em;
 }
 
 .works-header, .team-header {
@@ -331,43 +285,44 @@ footer{
     text-align: center;
 }
 
+
 /*Портфолио*/
 
-/*.main-portfolio{
-
+.menu-navigation{
+    margin-top: 94px;
+    margin-bottom: 50px;
 }
-*/
 
 .porfolio-navigation{
     display: flex;
-    width: 1170px;
-    height: 80px;
-    margin-left: 215px;
-    margin-right: 215px;
     justify-content: center;
-    align-items: center;
 }
 
-.port-nav-item {
-    margin: 10px;    
+.portfolio{
+    margin-top: 50px;
+    margin-bottom: 94px;
 }
 
 .main-portfolio{
     display: flex;
     flex-wrap: wrap;
-    margin-left: 215px;
-    margin-right: 215px;
-    margin-bottom: 50px;
+    margin-top: -30px;
+    margin-left: -30px;
 }
 
 .main-port-item{
-    flex-basis: calc(100% / 3 - 10px);
+    flex-basis: calc(100% / 3 - 30px);
+    border: 1px solid #EEEEEE;
+    margin-top: 30px;
+    margin-left: 30px;
 }
 
 .porfolio-header{
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
+    letter-spacing: 0.06em;
+    padding: 20px 24px 2px;
 }
 
 .portfolio-text{
@@ -375,6 +330,8 @@ footer{
     font-size: 16px;
     line-height: 1.88;
     margin-bottom: 10px;
+    letter-spacing: 0.03em;
+    padding: 2px 24px 20px;
 }
 
 /*button*/
@@ -401,6 +358,16 @@ button:focus{
 }
 
 .button-slice{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.63;
+    text-align: center;
+    letter-spacing: 0.03em;
+    
     background: #F5F4FA;
     color: var(--title-text-color);
+    border: 0;
+    padding: 6px 22px;
+    border-radius: 4px;
+    margin-left: 8px;
 }
