--- a/css/styles.css
+++ b/css/styles.css
@@ -273,13 +273,15 @@ footer{
     margin-bottom: 9px;
 }
 
+.footer-contact-item{
+    margin-bottom: 9px;
+}
 .footer-contact {
     color: rgba(255, 255, 255, 0.6);
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71px;
     letter-spacing: 0.03em;
-    margin-bottom: 9px;
 }
 
 .works-header, .team-header {
@@ -316,6 +318,8 @@ footer{
 }
 
 .main-port-item{
+    height: 404px;
+    width: 370px;
     flex-basis: calc(100%/3 - 30px);
     border: 1px solid #EEEEEE;
     margin-top: 30px;
@@ -338,7 +342,6 @@ footer{
     font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
-    margin-bottom: 10px;
     letter-spacing: 0.03em;
 }
 
